# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = {{ cookiecutter.full_name }}
description = {{ cookiecutter.description }}
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://sphinx.silverrainz.me/{{ cookiecutter.name }}
project_urls =
    Documentation = https://sphinx.silverrainz.me/{{ cookiecutter.name }}
    Source = https://github.com/{{ cookiecutter.github_owner }}/{{ cookiecutter.github_repo }}
    Changelog = https://sphinx.silverrainz.me/{{ cookiecutter.name }}/changelog.html
    Tracker = https://github.com/{{ cookiecutter.github_owner }}/{{ cookiecutter.github_repo }}/issues
    Download = https://pypi.org/project/{{ cookiecutter.pypi_name }}/#files

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Documentation :: Sphinx

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install demo-project[PDF]` like:
# PDF = ReportLab; RXP

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel
